vlib/v/checker/tests/index_of_option_err.vv
fn abc() ?[]int {
	return [1, 2, 3]
}

fn main() {
	a := abc()[0] or { 5 }
	dump(a)
}
